--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "backend",
+  "name": "aldrin_backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for ALDRIN_CSE7_Nutrilite project",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "pg": "^8.14.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "paytmchecksum": "^1.5.1",
+    "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "razorpay": "^2.9.6",
+    "sequelize": "^6.29.0",
+    "stripe": "^18.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
