--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
